# Laptop-Price-Predictor-ML-using-Fast-api

./: .env  README.md  main.py  pyproject.toml  requirements.txt
frontend/: admin_panel.py  app.py
laptop_price_predictor/core/: config.py  logger.py  mongodb_config.py
laptop_price_predictor/models/: prediction_model.py  user_input_schema_model.py
laptop_price_predictor/repositories/: mongodb_curd_operations_repository.py  prediction_repository.py
laptop_price_predictor/routers/v1/: _base.py  crud_operations.py  predictions.py
laptop_price_predictor/services/v1/: prediction_service.py  user_service.py
laptop_price_predictor/utils/: cache.py
ml_model/: linear_regression.pkl
