[project]
name = "laptop-price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib==3.8.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.15.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pymongo[srv]==4.15.3",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "scikit-learn==1.4.2",
    "seaborn==0.13.2",
    "streamlit==1.28.0",
    "uvicorn==0.24.0",
]
